--- a/_papers/2019-08-30-bio.md
+++ b/_papers/2019-08-30-bio.md
@@ -1,4 +1,5 @@
 ---
+state: hidden
 layout: paper
 title: Single-cell RNA sequencing reveals functional heterogeneity and sex differences of glioma-associated brain macrophages
 authors:  Ochocka N*, Segit P*, Walentynowicz KA, Wojnicki K, Cyranowski S, Swatler J, <b>Mieczkowski J</b>#, Kaminska B#
